fixed alignment

--- a/CSS/Advanced.css
+++ b/CSS/Advanced.css
@@ -1,4 +1,3 @@
-
 #floatright{
     padding-top: 5px;
     width: 100%;
@@ -43,6 +42,7 @@
 }
 .fields{
     display: flex;
+    align-items: center;
 }
 .C1{
     display: inline-block;
@@ -93,8 +93,7 @@
 }
 #text{
     display: flex;
-    margin:8px 0 0 10.323px;
-    padding-left: 5px;
+    padding-left: 19px;
 }
 #text2{
     display: flex;
@@ -119,5 +118,5 @@ span{
     font-family: monospace;
     font-size: 11px;
     white-space: pre;
-    display: block;
+    display: contents;
 }
